Project

General

Profile

Actions

Bug #24592

closed

"radosgw-admin objects expire" always returns ok even if the process fails.

Added by zhang sw almost 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

"radosgw-admin objects expire" always returns ok, even if the objects expire process fails. We should print error so that users can know about that.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #24830: luminous: "radosgw-admin objects expire" always returns ok even if the process fails.ResolvedPrashant DActions
Copied to rgw - Backport #24831: mimic: "radosgw-admin objects expire" always returns ok even if the process fails.ResolvedPrashant DActions
Actions #1

Updated by zhang sw almost 6 years ago

rgw: "radosgw-admin objects expire" always returns ok even if the process fails.

Actions #3

Updated by Jos Collin almost 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to zhang sw
Actions #4

Updated by Yehuda Sadeh almost 6 years ago

  • Status changed from Fix Under Review to 7
  • Backport set to mimic, luminous
Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Status changed from 7 to Pending Backport
Actions #7

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24830: luminous: "radosgw-admin objects expire" always returns ok even if the process fails. added
Actions #8

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24831: mimic: "radosgw-admin objects expire" always returns ok even if the process fails. added
Actions #9

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF