rgw: "radosgw-admin objects expire" always returns ok even if the process fails.

Fixes: http://tracker.ceph.com/issues/24592

Signed-off-by: Zhang Shaowen <zhangshaowen@cmss.chinamobile.com>
(cherry picked from commit f6fe07e8f549f6c54e4bc81a89558f14e71d3d9f)